--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "license": "MIT",
   "dependencies": {
     "@babel/helper-member-expression-to-functions": "^7.17.7",
+    "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "face-api.js": "^0.16.1",
     "gh-pages": "^2.0.1",
     "react": "^16.6.3",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-webcam": "^1.0.4",
+    "styled-components": "^5.3.5",
     "tslib": "^1.9.3"
   },
   "scripts": {
