--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-bootstrap": "^2.4.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
